formatted using JBoss formatting rules and changed to new JBoss standard LGPL header
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@772 a97e2381-89e5-4abb-bab3-167db6db766c